--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -12,8 +12,7 @@ Premium: http://www.gridgum.com
 /* BASIC THEME CONFIGURATION */
 body {
     color: #797979;
-	background: #f2f2f2;
-    background-size: cover;
+	background: url(../images/autos.gif) left ;
     font-family: 'Ruda', sans-serif;
     padding: 0px !important;
     margin: 0px !important;
@@ -1937,15 +1936,13 @@ label {
 	margin: 0;
 	padding: 25px 20px;
 	text-align: center;
-    /*background: url(../images/ny.jpg) ;*/
 	background: #68dff0;
 	border-radius: 5px 5px 0 0;
 	-webkit-border-radius: 5px 5px 0 0;
 	color: #fff;
-	font-size: 30px;
+	font-size: 20px;
 	text-transform: uppercase;
 	font-weight: 300;
-
 }
 .login-wrap {
 	padding: 20px;
